# forsith

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  Cargo.toml  build.rs  data-placement-plan.md  data-placement-plan.rs.txt  plan.md  plan.rs.txt
.github/workflows/: rust.yml
forsith/: Cargo.toml
forsith-benchmarking/: Cargo.toml
forsith-benchmarking/src/: main.rs
forsith-bindings/: Cargo.toml
forsith-bindings/src/: command_pool.rs  device.rs  instance.rs  lib.rs  macros.rs  physical_device.rs  result.rs  structure_type.rs  surface.rs  vk_result.rs
forsith-decoding/: Cargo.toml  build.rs
forsith-decoding/benches/: criterion.rs  gungraun.rs  png.rs
forsith-decoding/src/: buffers.rs  decoding_error.rs  lib.rs  num.rs  outputconverting.rs
forsith-decoding/src/png/: checksum.rs  chunkreader.rs  chunks.rs  crc.rs  deflate.rs  filtering.rs  mod.rs  pngsuite.rs  post_process.rs  postprocessing.rs  reader.rs  readers.rs
forsith-decoding/src/png/filtering/: simd_filtering.rs
forsith-decoding/src/png/simd/: checksum.rs  filtering.rs  mod.rs
forsith-decoding/src/tests/: mod.rs
forsith-engine/: Cargo.toml
forsith-engine/src/: E2E_tests.rs  command_pool.rs  device.rs  errors.rs  lib.rs
forsith-graphics/: Cargo.toml
forsith-graphics/src/: errors.rs
forsith-shared/: Cargo.toml
forsith-shared/src/: lib.rs
forsith-vulkan/: Cargo.toml
forsith-vulkan-backend/: Cargo.toml
forsith-vulkan-backend/src/: command_pool.rs  lib.rs
plans/: example.md  modules.md
src/: globals.rs  lib.rs  test_template.rs
src/drawable/: mod.rs
(+104 files in other folders)
