[package]
name = "forsith-decoding"
version = "0.1.0"
edition = "2024"

[dependencies]
const_for = "0.1.5"
num_enum = "0.7.6"
thiserror = "2.0.18"

[dev-dependencies]
serde_json = "1.0.150"
criterion = { version = "0.8", features = ["html_reports"] }
gungraun = "0.19.4"

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "gungraun"
harness = false
